hphp/test/zend7/Zend/tests/bug41633_2.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug41633_2.php on line 5